--- a/src/global.css
+++ b/src/global.css
@@ -12,9 +12,8 @@
   font-style: normal;
 }
 
-/* Aplica la fuente personalizada y el cursor */
 body {
-  @apply bg-gray-900 text-gray-100 font-sans;
+  @apply bg-custom-bg text-gray-100 font-sans;
   margin: 0;
   font-family: 'TrajanPro', sans-serif;
   cursor: url('./cursor.cur'), auto;
