--- a/src/global.css
+++ b/src/global.css
@@ -17,7 +17,5 @@ body {
   margin: 0;
   font-family: 'TrajanPro', sans-serif;
   cursor: url('./cursor.cur'), auto;
+  box-sizing: border-box;
 }
-
-
-
